--- a/style.css
+++ b/style.css
@@ -3,3 +3,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #eaeef0;
+}
+
+.scene {
+  position: relative;
+  width: 350px;
+  height: 250px;
+  background: #eaeef0;
+  border-radius: 20px;
+  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.9),
+    8px 8px 25px rgba(0, 0, 0, 0.5);
+  border: 1px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
