--- a/style.css
+++ b/style.css
@@ -25,3 +25,15 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.sun {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 40px #ffff5b, 0 0 60px #ffff5b, 0 0 80px #ffff5b,
+    0 0 100px #ffff5b;
+}
