--- a/style.css
+++ b/style.css
@@ -71,4 +71,14 @@ body {
     #fff 100%
   );
   background-size: 20px;
+  animation: animateRoad 0.2s linear infinite;
+}
+
+@keyframes animateRoad {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: -20px;
+  }
 }
