--- a/style.css
+++ b/style.css
@@ -82,3 +82,13 @@ body {
     background-position-x: -20px;
   }
 }
+
+.fa-car-side {
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
+  color: #fff;
+  font-size: 3.5em;
+  -webkit-text-stroke: 2px #000;
+  z-index: 10;
+}
