--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   position: relative;
   width: 350px;
   height: 250px;
-  background: #eaeef0;
+  background: #48b5eb;
   border-radius: 20px;
   box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.9),
     8px 8px 25px rgba(0, 0, 0, 0.5);
@@ -91,4 +91,15 @@ body {
   font-size: 3.5em;
   -webkit-text-stroke: 2px #000;
   z-index: 10;
+  animation: animateCar 0.2s linear infinite;
+}
+
+@keyframes animateCar {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(1px);
+  }
 }
