--- a/style.css
+++ b/style.css
@@ -103,3 +103,13 @@ body {
     transform: translateY(1px);
   }
 }
+
+.fa-cloudversify {
+  position: absolute;
+  top: calc(15px * var(--i));
+  left: calc(15px * var(--i));
+  font-size: 3.5em;
+  color: #fff;
+  -webkit-text-stroke: 2px #000;
+  z-index: 1;
+}
