--- a/style.css
+++ b/style.css
@@ -112,4 +112,15 @@ body {
   color: #fff;
   -webkit-text-stroke: 2px #000;
   z-index: 1;
+  animation: animateClouds 3.5s linear infinite;
+  animation-delay: calc(-1s * var(--i));
+}
+
+@keyframes animateClouds {
+  0% {
+    transform: translateX(350px);
+  }
+  100% {
+    transform: translateX(-350px);
+  }
 }
