--- a/style.css
+++ b/style.css
@@ -116,6 +116,16 @@ body {
   animation-delay: calc(-1s * var(--i));
 }
 
+.fa-tree {
+  position: absolute;
+  bottom: 60px;
+  font-size: 2em;
+  z-index: 2;
+  color: #0d9e0d;
+  animation: animateClouds 7s linear infinite;
+  animation-delay: calc(-1s * var(--i));
+}
+
 @keyframes animateClouds {
   0% {
     transform: translateX(350px);
