--- a/style.css
+++ b/style.css
@@ -126,6 +126,15 @@ body {
   animation-delay: calc(-1s * var(--i));
 }
 
+.fa-mountain {
+  position: absolute;
+  bottom: 0;
+  font-size: 10em;
+  color: #8b3c23;
+  animation: animateClouds 15s linear infinite;
+  animation-delay: calc(-3s * var(--i));
+}
+
 @keyframes animateClouds {
   0% {
     transform: translateX(350px);
